--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "ts-node src/app.ts",
         "build": "tsc",
-        "dev": "ts-node-dev src/app.ts"
+        "dev": "ts-node-dev src/app.ts",
+        "build:openapi": "openapi-typescript src/api/v1.yaml --output src/api/v1.d.ts"
     },
     "dependencies": {
         "express": "^4.17.1",
@@ -17,9 +18,10 @@
         "@types/express": "^4.17.13",
         "@types/swagger-ui-express": "^4.1.8",
         "@types/yamljs": "^0.2.34",
+        "openapi-typescript": "^7.8.0",
         "ts-node": "^10.4.0",
         "ts-node-dev": "^1.1.8",
-        "typescript": "^4.5.4"
+        "typescript": "^5.8.3"
     },
     "license": "MIT"
 }
